@@ -15,23 +15,17 @@
          </div>
          <div class="card-body">
            <form method="post" action="{% url "accounts:user_profile" %}">
-             <input type="hidden" id="id_username" name="username" value="{{ form.username.value }}">
              {% csrf_token %}
+             <input type="hidden" id="id_username" name="username" value="{{ form.username.value }}">
+             <input type="hidden" name="system_number" id="id_system_number" value="{{ form.system_number.value }}">
              <div class="row">
-               <div class="col-md-3">
-                 <div class="form-group">
-                   <label class="bmd-label-floating">{{ GLOBAL_ORG }} Number</label>
-                   <input type="text" class="form-control" name="system_number" id="id_system_number" value="{{ form.system_number.value }}" readonly>
-                 </div>
-               </div>
-
-               <div class="col-md-4">
+               <div class="col-md-6">
                  <div class="form-group">
                    <label class="bmd-label-floating">Email address</label>
                    <input type="email" name="email" id="id_email" class="form-control" value="{{ form.email.value }}">
                  </div>
                </div>
-               <div class="col-md-4">
+               <div class="col-md-6">
                  <div class="form-group">
                    <label class="bmd-label-floating">Mobile Number</label>
                    <input type="text" name="mobile" id="id_mobile" class="form-control" value="{{ form.mobile.value|default_if_none:""}}">
@@ -65,7 +59,15 @@
                    <input type="text" name="bbo_name" id="id_bbo_name" class="form-control" value="{{ form.bbo_name.value|default_if_none:'' }}">
                  </div>
                </div>
+            </div>
+            <div class="row">
+             <div class="col-md-3">
+               <div class="form-group">
+                 <label class="bmd-label-floating">Auto Top Up Amount</label>
+                 <input type="number" name="autotopup_amount" id="id_autotopup_amount" class="form-control" value="{{ form.autotopup_amount.value|default_if_none:'' }}">
+               </div>
              </div>
+           </div>
 
              <button type="submit" class="btn btn-primary pull-right">Update Profile</button>
              <div class="clearfix"></div>
