@@ -1,5 +1,6 @@
 from django.contrib import admin
-from .models import Balance, StripeTransaction, MemberTransaction, AutoTopUpConfig, OrganisationTransaction
+from .models import (StripeTransaction, MemberTransaction, AutoTopUpConfig,
+                    OrganisationTransaction)
 
 class MemberTransactionAdmin(admin.ModelAdmin):
     search_fields = ['reference_no', 'type']
@@ -10,7 +11,6 @@ class OrganisationTransactionAdmin(admin.ModelAdmin):
 class StripeTransactionAdmin(admin.ModelAdmin):
     search_fields = ['stripe_reference']
 
-admin.site.register(Balance)
 admin.site.register(MemberTransaction, MemberTransactionAdmin)
 admin.site.register(OrganisationTransaction, OrganisationTransactionAdmin)
 admin.site.register(StripeTransaction, StripeTransactionAdmin)
