@@ -1,0 +1,20 @@
+# Generated by Django 2.1 on 2020-05-05 03:07
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('payments', '0022_auto_20200502_1048'),
+    ]
+
+    operations = [
+        migrations.RemoveField(
+            model_name='balance',
+            name='member',
+        ),
+        migrations.DeleteModel(
+            name='Balance',
+        ),
+    ]
